--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,44 @@
 body {
-    background-color: cornflowerblue;
-    font-family: sans-serif, serif;
-    margin-top: 0px;
-    padding: 0px;
+  background-color: cornflowerblue;
+  font-family: sans-serif, serif;
 }
 h1 {
-    background-color: blueviolet;
-    color: chartreuse;
-    text-align: center;
-    line-height: 40px;
-    margin-top: 3px;
+  background-color: blueviolet;
+  color: chartreuse;
+  text-align: center;
+  line-height: 60px;
 }
-div {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    
+
+#maindiv {
+  padding: 0px 15%;
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.div1 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+.div2 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-end;
 }
 a {
-    text-decoration: underline yellowgreen;
-    color: blue;
-    font-size: 25px;
-    font-weight: 500;
-    line-height: 40px;
+  text-decoration: underline yellowgreen;
+  color: blue;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 70px;
 }
 a:hover {
-    background-color: black;
-    color: red;
+  background-color: black;
+  color: red;
 }
 a:focus {
-    background-color: turquoise;
+  background-color: turquoise;
 }
